Added new testcase (guilong), updated xu to include comparison to CSV data

--- a/TestCases/testcases.tex
+++ b/TestCases/testcases.tex
@@ -20,6 +20,6 @@
 \doublespacing
 \captionsetup{labelformat=empty}
 
-This folder contains two samples of data for use in the Paccman program. The variables within the "mazurcomparison" file are pulled from the 2017 paper: "Numerical and experimental evaluation of a conformally cooled H13 steel injection mould manufactured with selective laser melting" by Maciej Mazur, Paul Brincat, Martin Leary, and Milan Brandt. The data contained by the "xucomparison" file contains values from the 2001 paper: The Design of Conformal Cooling Channels in Injection Molding Tooling" by Xiorong Xu, Emanuel Sachs, and Samuel Allen. A comparison between both papers' experimentally found data and the resulting values from the use of their variables with the Paccman program  shows the accuracy of this software.
+This folder contains three samples of data for use in the Paccman program. The variables within the "mazurcomparison" file are pulled from the 2017 paper: "Numerical and experimental evaluation of a conformally cooled H13 steel injection mould manufactured with selective laser melting" by Maciej Mazur, Paul Brincat, Martin Leary, and Milan Brandt. The data contained by the "xucomparison" file contains values from the 2001 paper: The Design of Conformal Cooling Channels in Injection Molding Tooling" by Xiorong Xu, Emanuel Sachs, and Samuel Allen. "xucomparison.csv" is a table produced through WebPlotDigitizer of Figure 4 in the Xu paper. The data contained by the "guilongcomparison" file is from the 2010 paper "Analysis of thermal cycling efficiency and optimal design of heating/coolingsystems for rapid heat cycle injection molding process" by Wang Guilong, Zhao Guoqun, Li Huiping, and Guan Yanjin. "guilongcomparison.csv" contains the data from Figure 6 pulled with WebPlotDigitizer. A comparison between the papers' experimentally found data and the resulting values from the use of their variables with the Paccman program  shows the accuracy of this software.
 
 \end{document}
