Fixed PyTest error resulting from relative imports, solution is to use "-m" when testing

--- a/Docs/userdeveloperguide.tex
+++ b/Docs/userdeveloperguide.tex
@@ -121,7 +121,7 @@ Once the calculations are completed, the program creates a plot of the average h
 
 \medskip
 
-The program can be tested using Pytest by running the "pytest" command in the program's directory.
+The program can be tested using Pytest by running the following command in the program's directory: "python -m pytest".
 
 \clearpage
 
