--- a/Docs/userdeveloperguide.tex
+++ b/Docs/userdeveloperguide.tex
@@ -20,7 +20,7 @@
 \setlength{\parindent}{0em}
 \doublespacing
 \captionsetup{labelformat=empty}
-\bibliographystyle{alpha}
+\bibliographystyle{plain}
 
 \begin{center}
 {\huge PACCMAN User/Developer Guide}
@@ -243,7 +243,19 @@ Equation for Graphs: $y = ATM + (T_{MO} - ATM) \cdot e^{\dfrac{-x}{T_{Constant}}
 
 \section*{Test Cases:}
 
-This folder contains two samples of data for use in the PACCMAN program.  The data contained by the "xucomparison" file contains values from the 2001 paper: The Design of Conformal Cooling Channels in Injection Molding Tooling" by Xiorong Xu, Emanuel Sachs, and Samuel Allen. "xucomparison.csv" is a table produced through WebPlotDigitizer of Figure 4 in the Xu paper. The data contained by the "guilongcomparison" file is from the 2010 paper "Analysis of thermal cycling efficiency and optimal design of heating/coolingsystems for rapid heat cycle injection molding process" by Wang Guilong, Zhao Guoqun, Li Huiping, and Guan Yanjin. "guilongcomparison.csv" contains the data from Figure 6 pulled with WebPlotDigitizer. There are also .png files graphically comparing the real world results of these papers to the program's created graphs.
+This folder contains two samples of data for use in the PACCMAN program.
+
+\medskip
+
+The data contained by the "xucomparison" file contains values from pulled from \cite{XU2001}, while "xucomparison.csv" is a table produced through WebPlotDigitizer of Figure 4 in this  paper.
+
+\medskip
+
+The data contained by the "guilongcomparison" file is from \cite{GUILONG2010} and "guilongcomparison.csv" contains the data from Figure 6 pulled with WebPlotDigitizer. 
+
+\medskip
+
+There are also .png files graphically comparing the real world results of both these papers to the program's created graphs.
 
 \clearpage
 
