slight changes to guide

--- a/Docs/userdeveloperguide.tex
+++ b/Docs/userdeveloperguide.tex
@@ -241,7 +241,7 @@ Equation for Graphs: $y = ATM + (T_{MO} - ATM) \cdot e^{\dfrac{-x}{T_{Constant}}
 
 \clearpage
 
-\section*{Test Cases:}
+\section*{Validation Cases:}
 
 This folder contains two samples of data for use in the PACCMAN program.
 
