added brief summary of valdiation cases

--- a/Docs/userdeveloperguide.tex
+++ b/Docs/userdeveloperguide.tex
@@ -244,18 +244,12 @@ Equation for Graphs: $y = ATM + (T_{MO} - ATM) \cdot e^{\dfrac{-x}{T_{Constant}}
 \section*{Validation Cases:}
 
 This folder contains two samples of data for use in the PACCMAN program.
-
-\medskip
-
 The data contained by the "xucomparison" file contains values from pulled from \cite{XU2001}, while "xucomparison.csv" is a table produced through WebPlotDigitizer of Figure 4 in this  paper.
-
-\medskip
-
 The data contained by the "guilongcomparison" file is from \cite{GUILONG2010} and "guilongcomparison.csv" contains the data from Figure 6 pulled with WebPlotDigitizer. 
 
 \medskip
 
-There are also .png files graphically comparing the real world results of both these papers to the program's created graphs.
+As seen in the .png files for each validation case, the data from both papers is extremely close to what the PACCMAN program calculates. This provides some affirmation that the program works both correctly and accurately.
 
 \clearpage
 
