added helical cooling functionality

--- a/Docs/bib.bib
+++ b/Docs/bib.bib
@@ -15,7 +15,7 @@ journal = {Procedia CIRP},
 volume = {90},
 pages = {516-521},
 year = {2020},
-note = {27th CIRP Life Cycle Engineering Conference (LCE2020)Advancing Life Cycle Engineering : from technological eco-efficiency to technology that supports a world that meets the development goals and the absolute sustainability},
+note = {27th CIRP Life Cycle Engineering Conference (LCE2020) Advancing Life Cycle Engineering: from technological eco-efficiency to technology that supports a world that meets the development goals and the absolute sustainability},
 issn = {2212-8271},
 doi = {https://doi.org/10.1016/j.procir.2020.01.064},
 url = {https://www.sciencedirect.com/science/article/pii/S2212827120301487},
@@ -56,3 +56,29 @@ doi = {https://doi.org/10.1016/j.matdes.2010.01.042},
 url = {https://www.sciencedirect.com/science/article/pii/S0261306910000567},
 author = {Wang Guilong and Zhao Guoqun and Li Huiping and Guan Yanjin},
 }
+@article{JU2001,
+author = {Ju, Huaiming and Huang, Zhiyong and Xu, Yuanhui and Duan, Bing and Yu, Yu},
+address = {[Tokyo] :},
+issn = {0022-3131},
+journal = {Journal of nuclear science and technology.},
+lccn = {2011263275},
+number = {10},
+publisher = {Atomic Energy Society of Japan,},
+title = {Hydraulic Performance of Small Bending Radius Helical Coil-Pipe},
+volume = {38},
+year = {2001-10},
+}
+@article{XIN1997,
+author = {Xin, R C and Ebadian, M A},
+address = {New York, NY :},
+issn = {0022-1481},
+journal = {Journal of heat transfer.},
+lccn = {00214251},
+number = {3},
+publisher = {American Society of Mechanical Engineers},
+title = {The Effects of Prandtl Numbers on Local and Average Convective Heat Transfer Characteristics in Helical Pipes},
+volume = {119},
+year = {1997-08-01},
+}
+
+
