--- a/Tutorial/tutorial.tex
+++ b/Tutorial/tutorial.tex
@@ -45,7 +45,7 @@ After the input data is set, the program is ready to run. Using Anaconda (or som
 \end{figure}
 \end{center}
 
-The program will then ask the following question:
+If the variable inputs are for a mold with straight cooling pipes, the program will ask the following question:
 
 \begin{center}
 \begin{figure}[h]
@@ -54,7 +54,7 @@ The program will then ask the following question:
 \end{figure}
 \end{center}
 
-Choosing "N" will cause the program to prompt the user to select a heat transfer coefficient correlation. The options are "D" for Ditus-Boelter, "G" for Gnielinski, and "S" for Sieder-Tate. Selecting "H" will compare all three.
+Choosing "N" will cause the program to prompt the user to select a heat transfer coefficient correlation. The options are "D" for Ditus-Boelter, "G" for Gnielinski, and "S" for Sieder-Tate. Selecting "H" will compare all three. A mold with helical cooling geometry only has one option, so this menu will not appear.
 
 \medskip
 
@@ -80,7 +80,7 @@ The following image is an example of option "H", to compare the heat transfer co
 
 \clearpage
 
-The following image is an example of option "N", to only show the selected heat transfer coefficient correlation:
+The following image is either an example of option "N", to only show the selected heat transfer coefficient correlation or an example of a mold with a helical cooling pipe:
 
 \begin{center}
 \begin{figure}[h]
